--- a/Blazor5.0/Shared/NavMenu.razor
+++ b/Blazor5.0/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchdata-virtualized">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data (virtualized)
+            </NavLink>
+        </li>
     </ul>
 </div>
 
